--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,10 +17,12 @@ circle-ci = { repository = "exonum/exonum" }
 [dependencies]
 exonum = { version = "0.9.0", path = "../../../exonum" }
 exonum-configuration = { version = "0.9.0", path = "../../../services/configuration" }
+exonum-time = { version = "0.9.0", path = "../../../services/time" }
 serde = "1.0.0"
 serde_derive = "1.0.0"
-failure = "=0.1.1"
+failure = "=0.1.2"
 serde_json = "1.0.24"
+chrono = "0.4.5"
 
 [dev-dependencies]
 exonum-testkit = { version = "0.9.0", path = "../../../testkit" }
